--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -66,6 +66,47 @@
   note = {Accessed: 2023-09-13}
 }
 
+@book{cayen2011early,
+  title={Early drug development: strategies and routes to first-in-human trials},
+  author={Cayen, Mitchell N},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
+@article{grimm2009conduct,
+  title={The conduct of in vitro studies to address time-dependent inhibition of drug-metabolizing enzymes: a perspective of the pharmaceutical research and manufacturers of America},
+  author={Grimm, Scott W and Einolf, Heidi J and Hall, Steven D and He, Kan and Lim, Heng-Keang and Ling, Kah-Hiing John and Lu, Chuang and Nomeir, Amin A and Seibert, Eleanore and Skordos, Konstantine W and others},
+  journal={Drug Metabolism and Disposition},
+  volume={37},
+  number={7},
+  pages={1355--1370},
+  year={2009},
+  publisher={ASPET}
+}
+@misc{libretextbiology,
+  title = {libre text biology},
+  author = {Libretext}, 
+  year = {2023}, 
+  howpublished = {\url{https://bio.libretexts.org}},
+  note = {Accessed: 2023-09-13}
+}
+
+@misc{naverblog,
+  title = {naver blog enzyme inhibitor},
+  author = {naver}, 
+  year = {2023}, 
+  howpublished = {\url{https://m.blog.naver.com/PostView.naver?blogId=applepop&logNo=222270983736&categoryNo=13&proxyReferer=}},
+  note = {Accessed: 2023-09-13}
+}
+
+@misc{linearweaver,
+  title = {Lineweaver-Burk plots for inhibition},
+  author = {Wikipedia}, 
+  year = {2023}, 
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Enzyme_Inhibition_lineweaver-burk_plots.gif}},
+  note = {Accessed: 2023-09-13}
+}
+
 # 07.Rmd ----
 
 @article{wang2008oct2,
